Fix all texts in index.html to be visible in all screen sizes

--- a/mystyle.css
+++ b/mystyle.css
@@ -112,11 +112,15 @@ h4 {
 /* Finish */
 
 /* Video */
+@media screen and (max-width: 768px) {
+    .introductiontxt {
+        font-size: 30px;
+    }
+}
 .videocontent {
     padding: 10px;
     text-align: center;
     background-color: #ecedd4;
-    display: noflex;
 }
 #video {
     text-align: center;
@@ -131,7 +135,11 @@ h4 {
     font-size: 65px;
     color: #204116;
     font-weight: bold;
-    margin: 50px;
+}
+@media screen and (max-width: 768px) {
+    .introductiontxt {
+        font-size: 40px;
+    }
 }
 section {
     margin: 0 auto;
@@ -158,6 +166,11 @@ section {
     color: #F6BE00;
     font-weight: bold;
     text-align: center;
+}
+@media screen and (max-width: 768px) {
+    .aboutmetitle {
+        font-size: 40px;
+    }
 }
 .image-grid {
     display: flex;
@@ -194,16 +207,45 @@ details {
 
 /* Contact*/
 .contact {
-    color: #ffffff;
+    background-color: #ecedd4;
+    color: #204116;
     font-family: "Poppins", sans-serif;
     font-weight: 300;
-    font-size: 20px;
-    background-color: #ecedd4;
-    color:#204116
+    padding: 20px;
+    text-align: center;
 }
+
+.contact h1 {
+    font-size: 2.5rem;
+    margin-bottom: 20px;
+}
+
+.contact ul {
+    list-style-type: none;
+    padding: 0;
+}
+
 .listcon {
-    margin-left: 100px;
-    font-size: 30px;
+    font-size: 1.5rem;
+    margin: 10px 0;
+}
+
+@media screen and (max-width: 768px) {
+    .contact h1 {
+        font-size: 2rem;
+    }
+    .listcon {
+        font-size: 1.2rem;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .contact h1 {
+        font-size: 1.8rem;
+    }
+    .listcon {
+        font-size: 1rem;
+    }
 }
 /* Finish*/
 
